Closed Bug 1879988 Opened 2 years ago Closed 2 years ago

`GPUQueue.writeBuffer`'s range args. are not properly converted to a byte length when specified

Categories

(Core :: Graphics: WebGPU, defect, P2)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: ErichDonGubler, Assigned: ErichDonGubler)

References

Details

Attachments

(1 file)

No description provided.
Priority: P1 → P2
Summary: `GPUQueue.writeBuffer`'s `size` is not converted to a byte length when specified → `GPUQueue.writeBuffer`'s range args. are not converted to a byte length when specified
Summary: `GPUQueue.writeBuffer`'s range args. are not converted to a byte length when specified → `GPUQueue.writeBuffer`'s range args. are not properly converted to a byte length when specified
See Also: → 1881065
Attachment #9379846 - Attachment description: WIP: Bug 1879988: fix(webgpu): impl. proper conv. to byte offsets for range args. in `GPUQueue.writeBuffer` r=#webgpu-reviewers! → Bug 1879988: fix(webgpu): impl. proper conv. to byte offsets for range args. in `GPUQueue.writeBuffer` r=#webgpu-reviewers!
Pushed by egubler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bb417e100de0 fix(webgpu): impl. proper conv. to byte offsets for range args. in `GPUQueue.writeBuffer` r=webgpu-reviewers,bradwerth
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Regressions: 1883791
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: