Bug 1879988: fix(webgpu): impl. proper conv. to byte offsets for range args. in `GPUQueue.writeBuffer` r=webgpu-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D201668